--- a/molecule/redhat-7-vagrant/playbook.yml
+++ b/molecule/redhat-7-vagrant/playbook.yml
@@ -55,6 +55,8 @@
 
   post_tasks:
     - name: etcd --version
+      environment:
+        PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
       command: etcd --version
       register: result
       changed_when: result is not succeeded
@@ -67,6 +69,8 @@
       ignore_errors: true
 
     - name: etcdctl put foo bar
+      environment:
+        PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
       shell: |
         set -o pipefail
         etcdctl \
@@ -82,6 +86,8 @@
       changed_when: result is not succeeded
 
     - name: etcdctl get foo
+      environment:
+        PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
       shell: |
         set -o pipefail
         etcdctl \
