--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _etcd_download:
+  v3.4.2:
+    url: "https://github.com/etcd-io/etcd/releases/download/v3.4.2/etcd-v3.4.2-linux-amd64.tar.gz"
+    dest: "/var/cache/ansible/etcd-v3.4.2-linux-amd64.tar.gz"
+    checksum: "sha1:03101d109a0175c85db93628140c528261e9cfcf"
   v3.4.1:
     url: "https://github.com/etcd-io/etcd/releases/download/v3.4.1/etcd-v3.4.1-linux-amd64.tar.gz"
     dest: "/var/cache/ansible/etcd-v3.4.1-linux-amd64.tar.gz"
