--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -74,6 +74,7 @@
     url: "{{ item.url }}"
     dest: "{{ item.dest }}"
     checksum: "{{ item.checksum }}"
+    timeout: 300
   loop:
     - "{{ etcd_download }}"
   register: get_url_result
