base64 (en|de)code

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -317,7 +317,7 @@
     - etcd | systemctl restart
   tags: etcd
 
-- name: base64 encode certificates
+- name: base64 encode
   shell: |
     set -o pipefail
     tar zcfP - {{ _params | join(' ') }} | base64 -w 0
@@ -336,7 +336,7 @@
   changed_when: base64_encode_result is not succeeded
   tags: etcd
 
-- name: base64 decode certificates
+- name: base64 decode
   shell: |
     set -o pipefail
     echo -n {{ base64_encode_result.stdout | quote }} | base64 -d | tar zx -C /
