wrap long command

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -85,7 +85,10 @@
   shell: |
     set -o pipefail
     cd /usr/local/bin
-    TMP_DIR="`mktemp -d`" && tar -zx -C $TMP_DIR -f {{ etcd_download.dest }} && mv $TMP_DIR/*/etcd* . && rm -rf $TMP_DIR
+    TMP_DIR="`mktemp -d`" \
+      && tar -zx -C $TMP_DIR -f {{ etcd_download.dest }} \
+      && mv $TMP_DIR/*/etcd* . \
+      && rm -rf $TMP_DIR
   args:
     executable: "/bin/bash"
   when: get_url_result is changed
