--- a/molecule/redhat-7/molecule.yml
+++ b/molecule/redhat-7/molecule.yml
@@ -20,33 +20,7 @@ driver:
     name: libvirt
 platforms:
   - name: ${MOLECULE_INSTANCE_NAME}-1
-    box: generic/ubuntu1804
-    cpu: 2
-    memory: 4096
-    interfaces:
-      - auto_config: true
-        network_name: private_network
-        type: dhcp
-    provider_raw_config_args:
-      - 'disk_bus = "virtio"'
-      - 'storage :file, size: "10G", bus: "virtio"'
-    groups:
-      - etcd
-  - name: ${MOLECULE_INSTANCE_NAME}-2
-    box: generic/ubuntu1804
-    cpu: 2
-    memory: 4096
-    interfaces:
-      - auto_config: true
-        network_name: private_network
-        type: dhcp
-    provider_raw_config_args:
-      - 'disk_bus = "virtio"'
-      - 'storage :file, size: "10G", bus: "virtio"'
-    groups:
-      - etcd
-  - name: ${MOLECULE_INSTANCE_NAME}-3
-    box: generic/ubuntu1804
+    box: generic/rhel7
     cpu: 2
     memory: 4096
     interfaces:
