--- a/molecule/suse-15/playbook.yml
+++ b/molecule/suse-15/playbook.yml
@@ -26,6 +26,32 @@
   become: true
   roles:
     - role: etcd
+      etcd_listen_peer_urls: "https://{{ ansible_eth1.ipv4.address }}:2380,https://127.0.0.1:2380"
+      etcd_listen_client_urls: "https://{{ ansible_eth1.ipv4.address }}:2379,https://127.0.0.1:2379"
+      etcd_initial_advertise_peer_urls: "https://{{ ansible_eth1.ipv4.address }}:2380"
+      etcd_initial_cluster: >-
+        {%- for host in ansible_play_hosts -%}
+        {{ host }}=https://{{ hostvars[host].ansible_eth1.ipv4.address }}:2380,
+        {%- endfor -%}
+      etcd_advertise_client_urls: "https://{{ ansible_eth1.ipv4.address }}:2379"
+      etcd_csr_subject_alt_name: >-
+        {%- for host in ansible_play_hosts -%}
+        DNS:{{ host }},
+        {%- endfor -%}
+        DNS:localhost,
+        {%- for host in ansible_play_hosts -%}
+        IP:{{ hostvars[host].ansible_eth1.ipv4.address }},
+        {%- endfor -%}
+        IP:127.0.0.1
+      etcd_peer_csr_subject_alt_name: >-
+        {%- for host in ansible_play_hosts -%}
+        DNS:{{ host }},
+        {%- endfor -%}
+        DNS:localhost,
+        {%- for host in ansible_play_hosts -%}
+        IP:{{ hostvars[host].ansible_eth1.ipv4.address }},
+        {%- endfor -%}
+        IP:127.0.0.1
 
   post_tasks:
     - name: etcd --version
