--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -387,6 +387,7 @@
 - name: enable service
   service:
     name: "etcd"
+    state: "started"
     enabled: true
   changed_when: false
   ignore_errors: true
