--- a/molecule/redhat-7/molecule.yml
+++ b/molecule/redhat-7/molecule.yml
@@ -22,7 +22,33 @@ platforms:
   - name: ${MOLECULE_INSTANCE_NAME}-1
     box: generic/rhel7
     cpu: 2
-    memory: 4096
+    memory: 2048
+    interfaces:
+      - auto_config: true
+        network_name: private_network
+        type: dhcp
+    provider_raw_config_args:
+      - 'nic_model_type = "virtio"'
+      - 'disk_bus = "virtio"'
+      - 'volume_cache = "none"'
+      - 'storage :file, bus: "virtio", cache: "none"'
+  - name: ${MOLECULE_INSTANCE_NAME}-2
+    box: generic/rhel7
+    cpu: 2
+    memory: 2048
+    interfaces:
+      - auto_config: true
+        network_name: private_network
+        type: dhcp
+    provider_raw_config_args:
+      - 'nic_model_type = "virtio"'
+      - 'disk_bus = "virtio"'
+      - 'volume_cache = "none"'
+      - 'storage :file, bus: "virtio", cache: "none"'
+  - name: ${MOLECULE_INSTANCE_NAME}-3
+    box: generic/rhel7
+    cpu: 2
+    memory: 2048
     interfaces:
       - auto_config: true
         network_name: private_network
