--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _etcd_download:
+  v3.4.4:
+    url: "https://github.com/etcd-io/etcd/releases/download/v3.4.4/etcd-v3.4.4-linux-amd64.tar.gz"
+    dest: "{{ ansible_user_dir }}/.ansible/tmp/etcd-v3.4.4-linux-amd64.tar.gz"
+    checksum: "sha1:14bba762a39d7bea1d043bf6fa073db5fc09b655"
   v3.4.3:
     url: "https://github.com/etcd-io/etcd/releases/download/v3.4.3/etcd-v3.4.3-linux-amd64.tar.gz"
     dest: "{{ ansible_user_dir }}/.ansible/tmp/etcd-v3.4.3-linux-amd64.tar.gz"
