--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,9 +40,11 @@ etcd_initial_advertise_peer_urls: "https://{{ ansible_default_ipv4.address }}:23
 
 # initial cluster configuration for bootstrapping.
 etcd_initial_cluster: >-
+  {%- set _list = [] -%}
   {%- for host in ansible_play_hosts -%}
-  {{ host }}=https://{{ hostvars[host].ansible_default_ipv4.address }}:2380,
+  {%-   set _list = _list.append(host + "=https://" + hostvars[host].ansible_default_ipv4.address + ":2380") -%}
   {%- endfor -%}
+  {{ _list | join(',') }}
 
 # Initial cluster state ("new" or "existing").
 etcd_initial_cluster_state: "new"
@@ -64,14 +66,14 @@ etcd_csr_common_name: "{{ ansible_play_hosts[0] }}"
 
 # subjectAltName field of the CSR.
 etcd_csr_subject_alt_name: >-
+  {%- set _list = ["DNS:localhost", "IP:127.0.0.1"] -%}
   {%- for host in ansible_play_hosts -%}
-  DNS:{{ host }},
+  {%-   set _list = _list.append("DNS:" + host) -%}
   {%- endfor -%}
-  DNS:localhost,
   {%- for host in ansible_play_hosts -%}
-  IP:{{ hostvars[host].ansible_default_ipv4.address }},
+  {%-   set _list = _list.append("IP:" + hostvars[host].ansible_default_ipv4.address) -%}
   {%- endfor -%}
-  IP:127.0.0.1
+  {{ _list | join(',') }}
 
 # Enable client cert authentication.
 etcd_client_cert_auth: true
@@ -90,14 +92,14 @@ etcd_peer_csr_common_name: "{{ ansible_play_hosts[0] }}"
 
 # subjectAltName field of the CSR.
 etcd_peer_csr_subject_alt_name: >-
+  {%- set _list = ["DNS:localhost", "IP:127.0.0.1"] -%}
   {%- for host in ansible_play_hosts -%}
-  DNS:{{ host }},
+  {%-   set _list = _list.append("DNS:" + host) -%}
   {%- endfor -%}
-  DNS:localhost,
   {%- for host in ansible_play_hosts -%}
-  IP:{{ hostvars[host].ansible_default_ipv4.address }},
+  {%-   set _list = _list.append("IP:" + hostvars[host].ansible_default_ipv4.address) -%}
   {%- endfor -%}
-  IP:127.0.0.1
+  {{ _list | join(',') }}
 
 # Enable peer client cert authentication.
 etcd_peer_client_cert_auth: true
