--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -137,7 +137,7 @@
     ansible_python_interpreter: "python3"
   openssl_privatekey:
     path: "{{ etcd_trusted_ca_file | splitext | first }}.key"
-  when: ansible_hostname == ansible_play_hosts[0]
+  when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
     - etcd | systemctl restart etcd
@@ -155,7 +155,7 @@
     subject:
       CN: "{{ ansible_play_hosts[0] }}"
     basic_constraints: "CA:TRUE"
-  when: ansible_hostname == ansible_play_hosts[0]
+  when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
     - etcd | systemctl restart etcd
@@ -171,7 +171,7 @@
     csr_path: "{{ etcd_trusted_ca_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_trusted_ca_file | splitext | first }}.key"
     provider: "selfsigned"
-  when: ansible_hostname == ansible_play_hosts[0]
+  when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
     - etcd | systemctl restart etcd
@@ -184,7 +184,7 @@
     ansible_python_interpreter: "python3"
   openssl_privatekey:
     path: "{{ etcd_key_file }}"
-  when: ansible_hostname == ansible_play_hosts[0]
+  when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
     - etcd | systemctl restart etcd
@@ -210,7 +210,7 @@
       - clientAuth
       - serverAuth
     basic_constraints: "CA:FALSE"
-  when: ansible_hostname == ansible_play_hosts[0]
+  when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
     - etcd | systemctl restart etcd
@@ -228,7 +228,7 @@
     ownca_path: "{{ etcd_trusted_ca_file }}"
     ownca_privatekey_path: "{{ etcd_trusted_ca_file | splitext | first }}.key"
     provider: "ownca"
-  when: ansible_hostname == ansible_play_hosts[0]
+  when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
     - etcd | systemctl restart etcd
@@ -241,7 +241,7 @@
     ansible_python_interpreter: "python3"
   openssl_privatekey:
     path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.key"
-  when: ansible_hostname == ansible_play_hosts[0]
+  when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
     - etcd | systemctl restart etcd
@@ -259,7 +259,7 @@
     subject:
       CN: "{{ ansible_play_hosts[0] }}"
     basic_constraints: "CA:TRUE"
-  when: ansible_hostname == ansible_play_hosts[0]
+  when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
     - etcd | systemctl restart etcd
@@ -275,7 +275,7 @@
     csr_path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.key"
     provider: "selfsigned"
-  when: ansible_hostname == ansible_play_hosts[0]
+  when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
     - etcd | systemctl restart etcd
@@ -288,7 +288,7 @@
     ansible_python_interpreter: "python3"
   openssl_privatekey:
     path: "{{ etcd_peer_key_file }}"
-  when: ansible_hostname == ansible_play_hosts[0]
+  when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
     - etcd | systemctl restart etcd
@@ -314,7 +314,7 @@
       - clientAuth
       - serverAuth
     basic_constraints: "CA:FALSE"
-  when: ansible_hostname == ansible_play_hosts[0]
+  when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
     - etcd | systemctl restart etcd
@@ -332,7 +332,7 @@
     ownca_path: "{{ etcd_peer_trusted_ca_file }}"
     ownca_privatekey_path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.key"
     provider: "ownca"
-  when: ansible_hostname == ansible_play_hosts[0]
+  when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
     - etcd | systemctl restart etcd
@@ -352,7 +352,7 @@
       - "{{ etcd_peer_trusted_ca_file }}"
   args:
     executable: "/bin/bash"
-  when: ansible_hostname != ansible_play_hosts[0]
+  when: inventory_hostname != ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   register: base64_encode_result
   changed_when: base64_encode_result is not succeeded
@@ -364,7 +364,7 @@
     echo -n {{ base64_encode_result.stdout | quote }} | base64 -d | tar zx -C /
   args:
     executable: "/bin/bash"
-  when: ansible_hostname != ansible_play_hosts[0]
+  when: inventory_hostname != ansible_play_hosts[0]
   register: base64_decode_result
   changed_when: base64_decode_result is not succeeded
   tags: etcd
