--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -100,7 +100,7 @@
   when: get_url_result is changed
   notify:
     - etcd | systemctl daemon-reload
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: copy templates
@@ -115,7 +115,7 @@
     - { dest: "/lib/systemd/system/etcd.service" }
   notify:
     - etcd | systemctl daemon-reload
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: prepare files
@@ -142,7 +142,7 @@
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: "generate {{ etcd_trusted_ca_file | splitext | first }}.csr"
@@ -160,7 +160,7 @@
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: "generate {{ etcd_trusted_ca_file }}"
@@ -176,7 +176,7 @@
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: "generate {{ etcd_key_file }}"
@@ -189,7 +189,7 @@
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: "generate {{ etcd_cert_file | splitext | first }}.csr"
@@ -215,7 +215,7 @@
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: "generate {{ etcd_cert_file }}"
@@ -233,7 +233,7 @@
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: "generate {{ etcd_peer_trusted_ca_file | splitext | first }}.key"
@@ -246,7 +246,7 @@
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: "generate {{ etcd_peer_trusted_ca_file | splitext | first }}.csr"
@@ -264,7 +264,7 @@
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: "generate {{ etcd_peer_trusted_ca_file }}"
@@ -280,7 +280,7 @@
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: "generate {{ etcd_peer_key_file }}"
@@ -293,7 +293,7 @@
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: "generate {{ etcd_peer_cert_file | splitext | first }}.csr"
@@ -319,7 +319,7 @@
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: "generate {{ etcd_peer_cert_file }}"
@@ -337,7 +337,7 @@
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
   notify:
-    - etcd | systemctl restart etcd
+    - etcd | systemctl restart etcd.service
   tags: etcd
 
 - name: base64 encode
@@ -387,9 +387,9 @@
     - { dest: "{{ etcd_trusted_ca_file }}" }
   tags: etcd
 
-- name: systemctl start etcd
+- name: systemctl start etcd.service
   service:
-    name: "etcd"
+    name: "etcd.service"
     state: "started"
     enabled: true
   changed_when: false
